[gd_scene load_steps=30 format=3 uid="uid://bg8i512atkkvq"]

[ext_resource type="Script" uid="uid://d1iuv3nsbtetu" path="res://scripts/game_manager.gd" id="1_5nv5w"]
[ext_resource type="Texture2D" uid="uid://m682hf33k8cg" path="res://assets/tiles.png" id="2_xp8tn"]
[ext_resource type="Script" uid="uid://c20uir8y6xcqr" path="res://scripts/primary_camera.gd" id="3_rhhhf"]
[ext_resource type="Script" uid="uid://oniok2eyaxx7" path="res://scripts/tile_map.gd" id="3_sk60w"]
[ext_resource type="PackedScene" uid="uid://cg3rm2flhfpjd" path="res://scenes/player.tscn" id="4_qjcqe"]
[ext_resource type="Shader" uid="uid://pnyslxfthsec" path="res://assets/shaders/crt_effect.gdshader" id="5_jv3i5"]
[ext_resource type="Script" uid="uid://reauc4l3qr2k" path="res://scripts/dialogue_l0.gd" id="5_ll25s"]
[ext_resource type="Script" uid="uid://6uir81ovkprm" path="res://scripts/breakable_platform.gd" id="5_sk60w"]
[ext_resource type="Script" uid="uid://bgbq615x14ap8" path="res://scripts/screen_effect.gd" id="5_xp8tn"]
[ext_resource type="AudioStream" uid="uid://d0kh41a8q5iq6" path="res://assets/sfx/dialogue.wav" id="6_sk60w"]
[ext_resource type="LabelSettings" uid="uid://dcnyhvwtegtw8" path="res://assets/diaogue_style.tres" id="7_om4r1"]
[ext_resource type="Shader" uid="uid://bwlvq6k1vpt1f" path="res://assets/shaders/blink.gdshader" id="12_171oe"]
[ext_resource type="Texture2D" uid="uid://6v0tluh4k370" path="res://assets/platform.png" id="13_e8wc3"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_qcd3b"]
texture = ExtResource("2_xp8tn")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
5:2/0 = 0
6:2/0 = 0
1:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0

[sub_resource type="TileSet" id="TileSet_88ety"]
sources/0 = SubResource("TileSetAtlasSource_qcd3b")

[sub_resource type="SystemFont" id="SystemFont_j6w7d"]
font_names = PackedStringArray("Public Pixel")

[sub_resource type="LabelSettings" id="LabelSettings_x4b8f"]
font = SubResource("SystemFont_j6w7d")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_rhhhf"]
shader = ExtResource("5_jv3i5")
shader_parameter/resolution = Vector2(320, 180)
shader_parameter/scan_line_amount = 0.23
shader_parameter/warp_amount = 0.174
shader_parameter/vignette_amount = 0.669
shader_parameter/vignette_intensity = 0.3
shader_parameter/grille_amount = 0.111
shader_parameter/brightness_boost = 1.178

[sub_resource type="SystemFont" id="SystemFont_qjcqe"]
font_names = PackedStringArray("Public Pixel")

[sub_resource type="LabelSettings" id="LabelSettings_jv3i5"]
font = SubResource("SystemFont_qjcqe")
font_color = Color(1, 1, 1, 0)

[sub_resource type="Animation" id="Animation_sk60w"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect2:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_ll25s"]
resource_name = "fade_black"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect2:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 0), Color(0, 0, 0, 1)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("..")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(1),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"transit"
}]
}

[sub_resource type="Animation" id="Animation_om4r1"]
resource_name = "fade_white"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect2:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 1), Color(0, 0, 0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_171oe"]
_data = {
&"RESET": SubResource("Animation_sk60w"),
&"fade_black": SubResource("Animation_ll25s"),
&"fade_white": SubResource("Animation_om4r1")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ll25s"]
size = Vector2(644, 86)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qjcqe"]
size = Vector2(127, 13)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ypn4w"]
size = Vector2(48, 16)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_vc1y7"]
shader = ExtResource("12_171oe")
shader_parameter/end_time = 2.0
shader_parameter/start_freq = 1.0
shader_parameter/end_freq = 5.0
shader_parameter/time = 0.0
shader_parameter/flash_color = Color(1, 1, 1, 1)
shader_parameter/blink_length = 0.5

[sub_resource type="Gradient" id="Gradient_44yx7"]
colors = PackedColorArray(1, 1, 1, 1, 1, 1, 1, 0)

[node name="Level0" type="Node2D"]
script = ExtResource("1_5nv5w")

[node name="PrimaryCamera" type="Camera2D" parent="."]
script = ExtResource("3_rhhhf")

[node name="TileMapLayer" type="TileMapLayer" parent="."]
tile_set = SubResource("TileSet_88ety")
script = ExtResource("3_sk60w")

[node name="Player" parent="." instance=ExtResource("4_qjcqe")]
position = Vector2(0, -308)

[node name="BackgroundMusicPlayer" type="AudioStreamPlayer" parent="."]

[node name="Interface" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="LevelName" type="Label" parent="Interface"]
visible = false
layout_mode = 0
offset_left = -304.0
offset_top = -166.0
offset_right = -160.0
offset_bottom = -143.0
text = "REJECTIðŸ–¤N"
label_settings = SubResource("LabelSettings_x4b8f")

[node name="Dialogue" type="Control" parent="Interface"]
layout_mode = 3
anchors_preset = 0
offset_left = 83.0
offset_top = -164.0
offset_right = 123.0
offset_bottom = -124.0
script = ExtResource("5_ll25s")

[node name="DialogueSound" type="AudioStreamPlayer" parent="Interface/Dialogue"]
stream = ExtResource("6_sk60w")

[node name="d1" type="Label" parent="Interface/Dialogue"]
layout_mode = 0
offset_left = -39.0
offset_top = 136.0
offset_right = 39.0
offset_bottom = 159.0
text = "HUH?"
label_settings = ExtResource("7_om4r1")

[node name="ScreenEffect" type="CanvasLayer" parent="."]
script = ExtResource("5_xp8tn")

[node name="ColorRect2" type="ColorRect" parent="ScreenEffect"]
offset_right = 640.0
offset_bottom = 360.0
color = Color(0, 0, 0, 0)

[node name="ColorRect" type="ColorRect" parent="ScreenEffect"]
material = SubResource("ShaderMaterial_rhhhf")
offset_right = 640.0
offset_bottom = 360.0

[node name="LevelName" type="Label" parent="ScreenEffect"]
offset_left = 249.0
offset_top = 154.0
offset_right = 393.0
offset_bottom = 177.0
text = "REJECTIðŸ–¤N

BY   LOKA"
label_settings = SubResource("LabelSettings_jv3i5")

[node name="AnimationPlayer" type="AnimationPlayer" parent="ScreenEffect"]
libraries = {
&"": SubResource("AnimationLibrary_171oe")
}

[node name="Checkpoint2" type="Area2D" parent="."]
position = Vector2(-322, 202)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Checkpoint2"]
position = Vector2(322, 22)
shape = SubResource("RectangleShape2D_ll25s")

[node name="Checkpoint1" type="Area2D" parent="."]
position = Vector2(-114, -1)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Checkpoint1"]
position = Vector2(116.5, 25)
shape = SubResource("RectangleShape2D_qjcqe")

[node name="BreakablePlatform" type="AnimatableBody2D" parent="."]
position = Vector2(0, 40)
scale = Vector2(2.5, 1)
script = ExtResource("5_sk60w")
metadata/_custom_type_script = "uid://6uir81ovkprm"

[node name="CollisionShape2D" type="CollisionShape2D" parent="BreakablePlatform"]
shape = SubResource("RectangleShape2D_ypn4w")

[node name="Sprite2D" type="Sprite2D" parent="BreakablePlatform"]
material = SubResource("ShaderMaterial_vc1y7")
texture = ExtResource("13_e8wc3")

[node name="CPUParticles2D" type="CPUParticles2D" parent="BreakablePlatform"]
emitting = false
amount = 32
lifetime = 0.63
one_shot = true
explosiveness = 1.0
randomness = 1.0
lifetime_randomness = 0.42
emission_shape = 1
emission_sphere_radius = 0.01
direction = Vector2(0, 10)
spread = 102.5
gravity = Vector2(0, 10)
initial_velocity_min = 20.0
initial_velocity_max = 69.44
scale_amount_min = 0.5
scale_amount_max = 2.0
color = Color(0.534355, 0.530259, 0.624393, 1)
color_ramp = SubResource("Gradient_44yx7")

[connection signal="transit_to_next_scene" from="." to="ScreenEffect" method="_on_level_0_transit_to_next_scene"]
[connection signal="body_entered" from="Checkpoint2" to="Interface/Dialogue" method="_on_checkpoint_2_body_entered"]
[connection signal="body_entered" from="Checkpoint1" to="Interface/Dialogue" method="_on_checkpoint_1_body_entered"]
