[gd_scene load_steps=13 format=3 uid="uid://8o8p00g7weru"]

[ext_resource type="Script" uid="uid://d1iuv3nsbtetu" path="res://scripts/game_manager.gd" id="1_2venv"]
[ext_resource type="Script" uid="uid://cqda0eitmtfyv" path="res://scripts/player.gd" id="2_j6w7d"]
[ext_resource type="Texture2D" uid="uid://dpio7tfrvjhqu" path="res://assets/player-Sheet.png" id="2_paw1w"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_paw1w"]
size = Vector2(12, 16)

[sub_resource type="Animation" id="Animation_j6w7d"]
resource_name = "idle"
length = 1.2
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.433333, 0.833333),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [0, 1, 2]
}

[sub_resource type="Animation" id="Animation_x4b8f"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_tmr53"]
resource_name = "running"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25, 0.5, 0.75),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [3, 4, 5, 6]
}

[sub_resource type="Animation" id="Animation_qcd3b"]
resource_name = "jump_begin"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [7, 8]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_tmr53"]
_data = {
&"RESET": SubResource("Animation_x4b8f"),
&"idle": SubResource("Animation_j6w7d"),
&"jump_begin": SubResource("Animation_qcd3b"),
&"running": SubResource("Animation_tmr53")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_j6w7d"]
size = Vector2(508, 67)

[sub_resource type="SystemFont" id="SystemFont_j6w7d"]
font_names = PackedStringArray("Public Pixel")

[sub_resource type="LabelSettings" id="LabelSettings_x4b8f"]
font = SubResource("SystemFont_j6w7d")

[node name="GameManager" type="Node2D"]
script = ExtResource("1_2venv")

[node name="PrimaryCamera" type="Camera2D" parent="."]

[node name="BackgroundMusicPlayer" type="AudioStreamPlayer" parent="."]

[node name="Player" type="CharacterBody2D" parent="."]
script = ExtResource("2_j6w7d")

[node name="Sprite2D" type="Sprite2D" parent="Player"]
texture = ExtResource("2_paw1w")
hframes = 11

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player"]
position = Vector2(1, 0)
shape = SubResource("RectangleShape2D_paw1w")

[node name="AnimationPlayer" type="AnimationPlayer" parent="Player"]
libraries = {
&"": SubResource("AnimationLibrary_tmr53")
}

[node name="StaticBody2D" type="StaticBody2D" parent="."]
position = Vector2(0, 65)

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(20, 0)
shape = SubResource("RectangleShape2D_j6w7d")

[node name="Interface" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="LevelName" type="Label" parent="Interface"]
offset_left = -304.0
offset_top = -166.0
offset_right = -160.0
offset_bottom = -143.0
text = "REJECTIðŸ–¤N"
label_settings = SubResource("LabelSettings_x4b8f")
